- Created new class called SudokuCell
- Changed functionality of SudokuConfig to work with SudokuCell and Cell candidates

- Added new input file, input files renamed to be more specific with the speed the solver can solve them